Fixed order adaptation and text overflow

--- a/web/src/styles/components/UI/OrderHistory.scss
+++ b/web/src/styles/components/UI/OrderHistory.scss
@@ -10,11 +10,13 @@
     box-sizing: border-box;
 
     .cell {
+        width: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
-        text-align: center;
+        flex-direction: column;
         gap: 7px;
+        overflow: hidden;
 
         &:nth-child(1) {
             grid-column: 1;
@@ -34,6 +36,18 @@
         &:nth-child(6) {
             grid-column: 6;
         }
+
+        p {
+            display: inline-block;
+            width: 100%;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            text-align: center;
+
+            &.start {
+                align-self: flex-start;
+            }
+        }
     }
 
     .status {
@@ -51,7 +65,10 @@
         align-items: flex-start;
 
         .cell {
-            text-align: start;
+            display: flex;
+            justify-content: unset;
+            flex-direction: row;
+            flex-wrap: wrap;
         }
 
         .status {
